- Changed ConnectionString getter (Classes\MySQLConnectionData.cs) to always return the assembled string using a MySqlConnectionStringBuilder, and removed private connectionString member. - Changed ConnectionData property for an auto-property (Classes\MySQLSchemaInfo.cs). - Change code for opening and closing a connection (Classes\MySQLSchemaInfo.cs) and removed the Clear method. - Added a dummy row in the TableSchemaInfo table of the GetTableSchemaInfo method (Classes\MySQLSchemaInfo.cs) for unmapped columns used in the Export functionality. - Added code to exit the GetTableData method if an error occurs (Classes\MySQLSchemaInfo.cs). - Added a CreateTable method (Classes\MySQLSchemaInfo.cs) used when exporting Excel data to a new table. - Added default values for the TableSchemaInfo columns and a GetColumnDefinition method to return a formatted column definition string used when creating a new table (Classes\MySQLSchemaInfo.cs) - Added a ShowWarningBox method (Classes\Utilities.cs) - Changed the way button events are subscribed to (Controls\InfoLabel.cs) when the info label control is flagged to behave as a button through a setInternalEvents private method. - Moved the PasswordForm.cs file form the Controls folder to the Forms folder. - Added code to open and close connection to the panel leaving event methods (Controls\TaskPaneControl.cs). - Hooked code to export excel data to a new table and to an existing table (Controls\TaskPaneControl.cs). - Made fixes and overall changes to the Forms\ExportDataToTableForm.cs to map/unmap columns from Excel to a MySQL table. - Hooked code to export excel data to a new table and to an existing table (Panels\DBObjectSelectionPanel.cs). - Fixed indentation of TileView items (Panels\WelcomePanel.Designer.cs). - Added .bzr-mysql folder to have Bazaar send email notifications when commits are done.

--- a/source/ExcelAddIn/ExcelAddIn.csproj
+++ b/source/ExcelAddIn/ExcelAddIn.csproj
@@ -237,12 +237,6 @@
     <Compile Include="Controls\MyTreeView.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\PasswordForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Controls\PasswordForm.Designer.cs">
-      <DependentUpon>PasswordForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Controls\SearchEdit.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -273,6 +267,10 @@
     <Compile Include="Forms\NewSchemaDialog.Designer.cs">
       <DependentUpon>NewSchemaDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\PasswordForm.cs" />
+    <Compile Include="Forms\PasswordForm.Designer.cs">
+      <DependentUpon>PasswordForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Panels\DBObjectSelectionPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -300,9 +298,6 @@
     <EmbeddedResource Include="Controls\ManageTaskPaneRibbon.resx">
       <DependentUpon>ManageTaskPaneRibbon.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Controls\PasswordForm.resx">
-      <DependentUpon>PasswordForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Controls\SearchEdit.resx">
       <DependentUpon>SearchEdit.cs</DependentUpon>
     </EmbeddedResource>
@@ -317,6 +312,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\NewSchemaDialog.resx">
       <DependentUpon>NewSchemaDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PasswordForm.resx">
+      <DependentUpon>PasswordForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Panels\DBObjectSelectionPanel.resx">
       <DependentUpon>DBObjectSelectionPanel.cs</DependentUpon>
