--- a/source/ExcelAddIn/ExcelAddIn.csproj
+++ b/source/ExcelAddIn/ExcelAddIn.csproj
@@ -36,6 +36,7 @@
     </UpgradeBackupLocation>
     <OldToolsVersion>4.0</OldToolsVersion>
     <VSTO_TrustAssembliesLocation>true</VSTO_TrustAssembliesLocation>
+    <IsWebBootstrapper>False</IsWebBootstrapper>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <PublishUrl>publish\</PublishUrl>
     <InstallUrl />
@@ -45,7 +46,6 @@
     <UpdateEnabled>true</UpdateEnabled>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>days</UpdateIntervalUnits>
-    <IsWebBootstrapper>False</IsWebBootstrapper>
     <ProductName>MySQL.ExcelAddIn</ProductName>
     <PublisherName />
     <SupportUrl />
@@ -249,17 +249,23 @@
     <Compile Include="Controls\TaskPaneControl.Designer.cs">
       <DependentUpon>TaskPaneControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ExportDataToTableForm.cs">
+    <Compile Include="Forms\ExportDataToTableDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\ExportDataToTableForm.Designer.cs">
-      <DependentUpon>ExportDataToTableForm.cs</DependentUpon>
+    <Compile Include="Forms\ExportDataToTableDialog.designer.cs">
+      <DependentUpon>ExportDataToTableDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ImportForm.cs">
+    <Compile Include="Forms\ImportRoutineDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\ImportForm.Designer.cs">
-      <DependentUpon>ImportForm.cs</DependentUpon>
+    <Compile Include="Forms\ImportRoutineDialog.Designer.cs">
+      <DependentUpon>ImportRoutineDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ImportTableViewDialogDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ImportTableViewDialogDialog.designer.cs">
+      <DependentUpon>ImportTableViewDialogDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\NewConnectionDialog.cs">
       <SubType>Form</SubType>
@@ -273,11 +279,11 @@
     <Compile Include="Forms\NewSchemaDialog.Designer.cs">
       <DependentUpon>NewSchemaDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\PasswordForm.cs">
+    <Compile Include="Forms\PasswordDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\PasswordForm.Designer.cs">
-      <DependentUpon>PasswordForm.cs</DependentUpon>
+    <Compile Include="Forms\PasswordDialog.designer.cs">
+      <DependentUpon>PasswordDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Panels\DBObjectSelectionPanel.cs">
       <SubType>UserControl</SubType>
@@ -312,11 +318,14 @@
     <EmbeddedResource Include="Controls\TaskPaneControl.resx">
       <DependentUpon>TaskPaneControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ExportDataToTableForm.resx">
-      <DependentUpon>ExportDataToTableForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\ExportDataToTableDialog.resx">
+      <DependentUpon>ExportDataToTableDialog.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ImportForm.resx">
-      <DependentUpon>ImportForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\ImportRoutineDialog.resx">
+      <DependentUpon>ImportRoutineDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ImportTableViewDialogDialog.resx">
+      <DependentUpon>ImportTableViewDialogDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\NewConnectionDialog.resx">
       <DependentUpon>NewConnectionDialog.cs</DependentUpon>
@@ -324,8 +333,8 @@
     <EmbeddedResource Include="Forms\NewSchemaDialog.resx">
       <DependentUpon>NewSchemaDialog.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\PasswordForm.resx">
-      <DependentUpon>PasswordForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\PasswordDialog.resx">
+      <DependentUpon>PasswordDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Panels\DBObjectSelectionPanel.resx">
       <DependentUpon>DBObjectSelectionPanel.cs</DependentUpon>
