- Converted column data type to lower invariant in GetColumnDefinition method for consistency with comparisons (Classes\MySQLSchemaInfo.cs). - Fixed a problem with the GetSchemaCollection method when collection == "ENGINES" (Classes\Utilities.cs). - Fixed a problem in the importDataTableToExelAtGivenCell method to start at the given atCell parameter (Controls\TaskPaneControl.cs). - Fixed code in the ImportDataToExcel method to calculate the next table's import starting cell (Controls\TaskPaneControl.cs). - Changed AppendDataToTable method to instantiate an OldExportDataToTableDialog meanwhile the new export dialog is created (Controls\TaskPaneControl.cs). - Renamed the ExportDataToTableDialog files to OldExportDataToTableDialog (ExcelAddIn.csproj, Forms\OldExportDataToTableDialog.cs, Forms\OldExportDataToTableDialog.designer.cs, Forms\OldExportDataToTableDialog.resx). - Added code to show the return value for functions in the PropertyGrid and to return all output parameters and return values as a new table called OutAndReturnValues (Forms\ImportRoutineDialog.cs). - Defaulted chkIncludeHeaders.Checked to true on ImportTableViewDialog's constructor, added grdPreview_DataBindingComplete method to sellect all columns after grdPreview is populated and changed background colors for selected columns to have a white background (Forms\ImportTableViewDialogDialog.cs). - Conveted data type strings to lower invariant for comparisons (Forms\OldExportDataToTableDialog.cs). - Changed code to call for now the OldExportDataToTableDialog in the appendData_Click and exportToNewTable_Click methods (Panels\DBObjectSelectionPanel.cs).

--- a/source/ExcelAddIn/ExcelAddIn.csproj
+++ b/source/ExcelAddIn/ExcelAddIn.csproj
@@ -249,12 +249,6 @@
     <Compile Include="Controls\TaskPaneControl.Designer.cs">
       <DependentUpon>TaskPaneControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ExportDataToTableDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\ExportDataToTableDialog.designer.cs">
-      <DependentUpon>ExportDataToTableDialog.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\ImportRoutineDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -278,6 +272,12 @@
     </Compile>
     <Compile Include="Forms\NewSchemaDialog.Designer.cs">
       <DependentUpon>NewSchemaDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\OldExportDataToTableDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\OldExportDataToTableDialog.designer.cs">
+      <DependentUpon>OldExportDataToTableDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\PasswordDialog.cs">
       <SubType>Form</SubType>
@@ -318,9 +318,6 @@
     <EmbeddedResource Include="Controls\TaskPaneControl.resx">
       <DependentUpon>TaskPaneControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ExportDataToTableDialog.resx">
-      <DependentUpon>ExportDataToTableDialog.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ImportRoutineDialog.resx">
       <DependentUpon>ImportRoutineDialog.cs</DependentUpon>
     </EmbeddedResource>
@@ -332,6 +329,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\NewSchemaDialog.resx">
       <DependentUpon>NewSchemaDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\OldExportDataToTableDialog.resx">
+      <DependentUpon>OldExportDataToTableDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\PasswordDialog.resx">
       <DependentUpon>PasswordDialog.cs</DependentUpon>
