- Added MySQLColumn and MySQLTable classes to represent mapped MySQL Columns and Tables (Classes\MySQLColumn.cs, Classes\MySQLTable.cs). - Added TypeConverter classes used in MySQLColumn and MySQLTable classes (Classes\MySQLColumn.cs, Classes\MySQLTable.cs). - Changed code in GetSchemaCollection method to get Collations and Charsets (Classes\Utilities.cs). - Added GetDataTypes, GetMySQLDataType and TableExistsInSchema methods (Classes\Utilities.cs). - Changed code in AppendDataToTable method to call the new ExportDataToTableDialog class (Controls\TaskPaneControl.cs). - Added code to ExportDataToTableDialog class to fully implement data export functionality allowing users to specify column properties for columns in new table, filtering out empty rows and allowing users to remove columns in selected range (Forms\ExportDataToTableDialog.cs). - Removed exportDataToTable method since it's no longer used (Panels\DBObjectSelectionPanel.cs). - Added a couple of validations for export data (Panels\DBObjectSelectionPanel.cs).

--- a/source/ExcelAddIn/ExcelAddIn.csproj
+++ b/source/ExcelAddIn/ExcelAddIn.csproj
@@ -217,10 +217,12 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="Classes\MySQLColumn.cs" />
     <Compile Include="Classes\MySQLConnectionData.cs" />
     <Compile Include="Classes\MySQLSchemaInfo.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Classes\MySQLTable.cs" />
     <Compile Include="Classes\Utilities.cs" />
     <Compile Include="Controls\HotLabel.cs">
       <SubType>UserControl</SubType>
@@ -365,6 +367,8 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="ExcelAddIn_TemporaryKey.pfx" />
+    <None Include="Properties\DataSources\MySQLColumn.datasource" />
+    <None Include="Properties\DataSources\MySQLTable.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -573,6 +577,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ArrowRight.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\db.Column.16x16.png" />
   </ItemGroup>
   <!-- Include the build rules for a C# project. -->
   <PropertyGroup>
