- Added ColumnsRequireQuotes property to MySQLColumn class (Classes\MySQLColumn.cs). - Added MySQLIndex class (Classes\MySQLIndex.cs). - Added Indexes, PrimaryKey and UniqueIndexes properties to MySQLTable class (Classes\MySQLTable.cs). - Added AddExtendedProperties, assembleSelectQuery, GetDataAdapterFromTable and NameToType methods (Classes\Utilities.cs). - Added EditTableData method (Controls\TaskPaneControl.cs). - Added EditChangesDialog and EditDataDialog classes (Forms\EditChangesDialog.cs and Forms\EditDataDialog.cs). - Added code to editData_Click method to openl the EditDataDialog form (Panels\DBObjectSelectionPanel.cs). - Added RevertDataConfirmation property string (Properties\Resources.resx).

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Classes\ExportDataHelper.cs" />
     <Compile Include="Classes\MySQLColumn.cs" />
     <Compile Include="Classes\MySQLConnectionData.cs" />
+    <Compile Include="Classes\MySQLIndex.cs" />
     <Compile Include="Classes\MySQLTable.cs" />
     <Compile Include="Classes\Utilities.cs" />
     <Compile Include="Controls\HotLabel.cs">
@@ -256,6 +257,18 @@
     </Compile>
     <Compile Include="Forms\AppendDataToTableDialog.Designer.cs">
       <DependentUpon>AppendDataToTableDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\EditChangesDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EditChangesDialog.Designer.cs">
+      <DependentUpon>EditChangesDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\EditDataDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EditDataDialog.Designer.cs">
+      <DependentUpon>EditDataDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\ExportDataToTableDialog.cs">
       <SubType>Form</SubType>
@@ -331,6 +344,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AppendDataToTableDialog.resx">
       <DependentUpon>AppendDataToTableDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EditChangesDialog.resx">
+      <DependentUpon>EditChangesDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EditDataDialog.resx">
+      <DependentUpon>EditDataDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ExportDataToTableDialog.resx">
       <DependentUpon>ExportDataToTableDialog.cs</DependentUpon>
