- Made changes to MySQLDataTable and MySQLDataColumn classes to work with ExportDataForm (Classes\MySQLDataTable.cs). - Changes to ExportDataForm class (Forms\ExportDataForm.cs). - Added a new datasource for MySQLDataColumn class (MySQL.ForExcel.csproj).

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -409,6 +409,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\DataSources\MySQLColumn.datasource" />
+    <None Include="Properties\DataSources\MySQLDataColumn.datasource" />
     <None Include="Properties\DataSources\MySQLTable.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
